--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "jquery-document-editor",
-  "version": "1.1.2",
-  "description": "jQuery document maker",
-  "main": "index.js",
+  "name": "js-document-editor",
+  "version": "2.0.0",
+  "description": "javascript document maker",
+  "main": "dist/jeditor.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "sass": "node-sass -w src/sass/ -o dist/css/",
+    "watch": "webpack --watch --mode=development",
+    "build": "webpack --mode=production",
+    "build:dev": "webpack --mode=development"
   },
   "repository": {
     "type": "git",
@@ -17,6 +21,20 @@
   },
   "homepage": "https://github.com/IvanVasquez/jEditor#readme",
   "dependencies": {
-    "jquery": "^3.5.0"
+    "@fortawesome/fontawesome-free": "^5.15.4"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.15.0",
+    "@babel/preset-env": "^7.15.0",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^6.2.0",
+    "mini-css-extract-plugin": "^2.2.0",
+    "node-sass": "^6.0.1",
+    "postcss-loader": "^6.1.1",
+    "postcss-preset-env": "^6.7.0",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.2.1",
+    "webpack": "^5.49.0",
+    "webpack-cli": "^4.7.2"
   }
 }
