--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "js-document-editor",
-  "version": "2.0.5",
+  "version": "2.0.6",
   "description": "javascript document maker",
   "main": "dist/jeditor.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",    
+    "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch --mode=development",
     "build": "webpack --mode=production",
     "build:dev": "webpack --mode=development"
@@ -20,7 +20,8 @@
   },
   "homepage": "https://github.com/IvanVasquez/jEditor#readme",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.4"
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "deepmerge": "^4.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
