--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
   "name": "js-document-editor",
-  "version": "2.2.1",
+  "version": "2.2.2",
   "description": "javascript document maker and editor",
   "main": "dist/jeditor.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack --mode=development",
     "watch": "webpack --watch --mode=development",
-    "build": "webpack --mode=production",
-    "build:dev": "webpack --mode=development"
+    "build": "webpack --mode=production"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/IvanVasquez/jEditor.git"
+    "url": "git+https://github.com/medic-plus/js-document-editor.git"
   },
   "author": "Ivan Vasquez",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/IvanVasquez/jEditor/issues"
+    "url": "https://github.com/medic-plus/js-document-editor/issues"
   },
-  "homepage": "https://github.com/IvanVasquez/jEditor#readme",
+  "homepage": "https://github.com/medic-plus/js-document-editor#readme",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.0",
     "deepmerge": "^4.2.2",
@@ -27,15 +26,15 @@
   "devDependencies": {
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
-    "babel-loader": "^8.2.2",
+    "babel-loader": "^9.1.3",
     "css-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.2.0",
-    "node-sass": "^7.0.1",
+    "node-sass": "^9.0.0",
     "postcss-loader": "^7.0.0",
-    "postcss-preset-env": "^7.2.3",
+    "postcss-preset-env": "^9.0.0",
     "sass-loader": "^13.0.0",
     "style-loader": "^3.2.1",
     "webpack": "^5.49.0",
-    "webpack-cli": "^4.7.2"
+    "webpack-cli": "^5.1.4"
   }
 }
