--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@medicplus/js-document-editor",
-  "version": "3.0.0-rc.0",
+  "version": "3.0.0-rc.1",
   "description": "A simple and extensible JavaScript document editor",
   "main": "dist/jeditor.js",
   "type": "module",
@@ -33,6 +33,15 @@
     "tailwindcss": "^3.4.3",
     "tslib": "^2.6.2",
     "typescript": "^5.4.5",
-    "vite": "^5.2.11"
-  }
+    "vite": "^5.2.11",
+    "vite-plugin-static-copy": "^1.0.4"
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
+  "module": "dist/jeditor.js",
+  "browser": "dist/jeditor.js",
+  "types": "dist/index.d.ts"
 }
