--- a/package.json
+++ b/package.json
@@ -33,6 +33,15 @@
     "tailwindcss": "^3.4.3",
     "tslib": "^2.6.2",
     "typescript": "^5.4.5",
-    "vite": "^5.2.11"
-  }
+    "vite": "^5.2.11",
+    "vite-plugin-static-copy": "^1.0.4"
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
+  "module": "dist/jeditor.js",
+  "browser": "dist/jeditor.js",
+  "types": "dist/index.d.ts"
 }
