--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@medicplus/js-document-editor",
-  "version": "3.0.4",
+  "version": "3.1.0",
   "description": "A simple and extensible JavaScript document editor",
   "main": "dist/jeditor.js",
   "type": "module",
@@ -19,22 +19,24 @@
   },
   "homepage": "https://github.com/medic-plus/js-document-editor#readme",
   "devDependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.6.0",
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
-    "@rollup/plugin-typescript": "^12.1.0",
-    "@types/node": "^20.16.7",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@rollup/plugin-typescript": "^12.1.2",
+    "@tailwindcss/postcss": "^4.0.3",
+    "@tailwindcss/vite": "^4.0.3",
+    "@types/node": "^22.13.1",
     "autoprefixer": "^10.4.20",
     "interactjs": "^1.10.27",
-    "postcss": "^8.4.47",
-    "prettier": "^3.3.3",
+    "postcss": "^8.5.1",
+    "prettier": "^3.4.2",
     "rollup-plugin-typescript-paths": "^1.5.0",
-    "sass": "^1.79.3",
+    "sass": "^1.83.4",
     "tailwindcss": "^3.4.13",
-    "tslib": "^2.7.0",
-    "typescript": "^5.6.2",
-    "vite": "^5.4.8",
-    "vite-plugin-static-copy": "^1.0.6",
-    "yarn-audit-fix": "^10.0.9"
+    "tslib": "^2.8.1",
+    "typescript": "^5.7.3",
+    "vite": "^6.1.0",
+    "vite-plugin-static-copy": "^2.2.0",
+    "yarn-audit-fix": "^10.1.1"
   },
   "files": [
     "dist",
