--- a/package.json
+++ b/package.json
@@ -33,8 +33,7 @@
     "tslib": "^2.8.1",
     "typescript": "^5.9.3",
     "vite": "^6.4.1",
-    "vite-plugin-static-copy": "^3.2.0",
-    "yarn-audit-fix": "^10.1.1"
+    "vite-plugin-static-copy": "^3.2.0"
   },
   "files": [
     "dist",
