--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@medicplus/js-document-editor",
-  "version": "3.2.2",
+  "version": "3.2.3",
   "description": "A simple and extensible JavaScript document editor",
   "main": "dist/jeditor.js",
   "type": "module",
@@ -22,19 +22,18 @@
     "@fortawesome/fontawesome-svg-core": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@rollup/plugin-typescript": "^12.3.0",
-    "@types/node": "^24.10.1",
-    "autoprefixer": "^10.4.22",
+    "@types/node": "^24.10.10",
+    "autoprefixer": "^10.4.24",
     "interactjs": "^1.10.27",
     "postcss": "^8.5.6",
-    "prettier": "^3.7.4",
+    "prettier": "^3.8.1",
     "rollup-plugin-typescript-paths": "^1.5.0",
-    "sass": "^1.94.2",
-    "tailwindcss": "^3.4.18",
+    "sass": "^1.97.3",
+    "tailwindcss": "^3.4.19",
     "tslib": "^2.8.1",
     "typescript": "^5.9.3",
-    "vite": "^6.4.1",
-    "vite-plugin-static-copy": "^3.1.4",
-    "yarn-audit-fix": "^10.1.1"
+    "vite": "^7.3.1",
+    "vite-plugin-static-copy": "^3.2.0"
   },
   "files": [
     "dist",
