--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,6 +2,9 @@ name: Publish to NPM
 on:
   release:
     types: [created]
+permissions:
+  id-token: write
+  contents: read
 jobs:
   build:
     runs-on: self-hosted
